tests/js_error/source_locations/stores/error_const.exp
TypeError: can't assign constant `x`
  ┌ tests/js_error/source_locations/stores/error_const.js:3:3
  |
3 |   x = 2;
  |   ^
Stack trace:
  at test (tests/js_error/source_locations/stores/error_const.js:3:3)
  at <global> (tests/js_error/source_locations/stores/error_const.js:6:1)